Fix additional build issue following Jakarta/17 migration. (merge main -> ce/main @ 94874)
[git-p4: depot-paths = "//dev/coherence-ce/main/": change = 94875]