@@ -21,6 +21,11 @@ import com.oracle.coherence.testing.TestMapListener;
 
 import data.Person;
 
+import java.io.File;
+
+import java.util.Arrays;
+import java.util.stream.Collectors;
+
 import org.junit.AfterClass;
 import org.junit.BeforeClass;
 import org.junit.Test;
@@ -61,6 +66,14 @@ public class DistExtendNearAllTests
     @BeforeClass
     public static void startup()
         {
+        String[] defaultJvmOpts = new String[] {
+                "-server",
+                "-XX:+HeapDumpOnOutOfMemoryError",
+                "-XX:HeapDumpPath=" + System.getProperty("test.project.dir") + File.separatorChar + "target",
+                "-XX:+ExitOnOutOfMemoryError",
+                "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED"};
+
+        System.setProperty("test.jvm.options", Arrays.stream(defaultJvmOpts).collect(Collectors.joining(" ")));
         startCacheServerWithProxy("DistExtendNearAllTests", "extend", FILE_SERVER_CFG_CACHE);
         }
 
